LIST OF CHANGES
---------------

release 6.40.0 (2025-08-19)
 - Updates for eseq_run table:
   - added run_manifest JSON column,
   - added run_type column,
   - updated a comment for run_stats column.

release 6.39.1 (2025-08-06)
 - Renamed scripts/update_schema_7.0.0.sql to scripts/update_schema_6.39.0.sql
   so that the name of the script corresponds to the release version for the
   update of the production database.
 - Deleted redundant WTSI::DNAP::Warehouse::Schema::Query::LimsFlags role.

release 6.39.0 (2025-07-16)
 - Updated DBIx ORM classes to bring them up-to-date with the production database.
 - Added tables for Elembio data - iseq_run_lane_metrics and iseq_product_metrics.
   Generated ORM classes for these tables.

release 6.38.0 (2025-04-02)
 - Change iseq_product_metrics tag_decode_count from int to bigint to support
   values greater than 4294967295 and bring other tables up to date.
  
release 6.37.0 (2025-03-10)
 - Added 'lane_released' column to the existing iseq_run_lane_metrics table
   to capture the date of lane release.

release 6.36.0 (2025-02-20)
 - Added eseq_run table to ml warehouse database. The table will keep
   information about a run performed on an Element Biosciences instrument.
   Generate DBIx class for this table.

release 6.35.0 (2025-01-16)
 - Fix perlbrew installation by installing libdevel-patchperl-perl in
   GitHub runner.
 - Updated ORM classes by ingesting changes for the 'sample' table from the
   production database. Added a class for the 'aliqoute' table.

release 6.34.0 (2024-10-24)
 - Added new delegated methods to WTSI::DNAP::Warehouse::Schema::Result::IseqFlowcell,
   sample_uuid and sample_lims.
 - Updated ORM classes by ingesting changes from the prod database

release 6.33.1 (2024-10-04)
 - Added .github/dependabot.yml file to auto-update GitHub actions
 - GitHub CI - updated deprecated v2 runner action to v3
 - Following a release on 07/09/2024, see https://metacpan.org/dist/App-perlbrew/changes,